--- a/xpi/locale/it/options.dtd
+++ b/xpi/locale/it/options.dtd
@@ -20,7 +20,6 @@
 
 <!ENTITY Ctr_main_t			"Principale">
 <!ENTITY Ctr_tabcolors_t	"Colori personalizzati">
-<!ENTITY Ctr_fixes_t		"Correzioni">
 <!ENTITY Ctr_special_t		"Speciali">
 
 <!ENTITY Ctr_tabs			"Schede">
@@ -83,7 +82,6 @@
 <!ENTITY Ctr_wincontrols	"Angoli finestra mobili in modalità schermo intero">
 <!ENTITY Ctr_starinurl		"Stella nella barra degli indirizzi (riavviare Firefox)">
 <!ENTITY Ctr_mstatusbar		"Barra di stato mobile">
-<!ENTITY Ctr_movpaneluib	"Pulsante dei menu mobile (riavviare Firefox)">
 <!ENTITY Ctr_hideurelstop	"Nascondi pulsanti Stop e Ricarica nella barra degli indirizzi">
 <!ENTITY Ctr_combrelstop	"Unisci i pulsanti Stop e Ricarica">
 <!ENTITY Ctr_panelmenucol	"Colore di sfondo alternativo per i menu">
@@ -116,6 +114,8 @@
 
 <!ENTITY Ctr_toolbars		"Barra degli strumenti">
 <!ENTITY Ctr_altmenubar		"Aggiungi colore di sfondo alla barra dei menu (Barra del titolo di sistema)">
+<!ENTITY Ctr_altmenubarpos	"Menubar: alternative position (below Firefox titlebar)">
+<!ENTITY Ctr_noaddonbarbg	"Add-on bar: remove background color (Windows AeroGlass / Win8)">
 <!ENTITY Ctr_menubarnofog	"Elimina l’effetto nebbia o il colore di sfondo nelle barre dei menu (Windows AeroGlass e Windows 8)">
 <!ENTITY Ctr_notabfog		"Disattiva l’effetto nebbia della barra delle schede (Windows AeroGlass e Win8)">
 <!ENTITY Ctr_notabbg		"Rimuovi colore di sfondo nella barra delle schede (Windows AeroGlass e Win8)">
@@ -152,8 +152,11 @@
 
 <!ENTITY Ctr_paneluibtweak	"Utilizza lo stile del pulsante app per i pulsanti nella barra delle schede">
 <!ENTITY Ctr_dblclnewtab	"Barra delle schede: doppio clic del mouse per aprire una nuova scheda">
+<!ENTITY Ctr_hidetbwot		"Barra delle schede: hide tabs toolbar with one tab (restart Firefox!)">
+<!ENTITY Ctr_faviconurl		"Favicon in urlbar (restart Firefox!)">
 <!ENTITY Ctr_dblclclosefx	"Pulsante applicazione nella barra del titolo: doppio clic per chiudere la finestra corrente">
 <!ENTITY Ctr_hide_bf_popup	"Nascondi la cronologia tenendo premuto il pulsante Avanti/Indietro mobile">
+<!ENTITY Ctr_verifiedcolors	"Alternative identity-box colors for verified websites">
 
 <!ENTITY Ctr_animation		"Icone animate">
 <!ENTITY Ctr_throbberalt	"Throbber di caricamento scheda alternativo">
