--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -20,7 +20,6 @@
 
 <!ENTITY Ctr_main_t			"Principal">
 <!ENTITY Ctr_tabcolors_t	"Cores personalizadas">
-<!ENTITY Ctr_fixes_t		"Correções">
 <!ENTITY Ctr_special_t		"Especiais">
 
 <!ENTITY Ctr_tabs			"Guias">
@@ -83,7 +82,6 @@
 <!ENTITY Ctr_wincontrols	"Controles móveis da janela em tela cheia">
 <!ENTITY Ctr_starinurl		"Botão de favoritos na barra de URLs (reinicie o Firefox!)">
 <!ENTITY Ctr_mstatusbar		"Painel móvel da barra de status">
-<!ENTITY Ctr_movpaneluib	"Botão móvel do menú do painel (reinicie o Firefox!)">
 <!ENTITY Ctr_hideurelstop	"Ocultar os botões parar e recarregar das barras de URLs">
 <!ENTITY Ctr_combrelstop	"Combinar os botões parar e recarregar">
 <!ENTITY Ctr_panelmenucol	"Menús do painel: cor do fundo alternativa">
@@ -116,6 +114,8 @@
 
 <!ENTITY Ctr_toolbars		"Barras de Ferramentas">
 <!ENTITY Ctr_altmenubar		"Barra de menús: adicionar cor do fundo (Barra de títulos do S.O.)">
+<!ENTITY Ctr_altmenubarpos	"Menubar: alternative position (below titlebar)">
+<!ENTITY Ctr_noaddonbarbg	"Barra de complementos: remover a cor do fundo (Windows AeroGlass / Win8)">
 <!ENTITY Ctr_menubarnofog	"Barra de menús: remover a cor/névoa do fundo  (Windows AeroGlass / Win8)">
 <!ENTITY Ctr_notabfog		"Barra de guias: remover a névoa do fundo (Windows AeroGlass / Win8)">
 <!ENTITY Ctr_notabbg		"Barra de guias: remover a cor do fundo (Windows AeroGlass / Win8)">
@@ -152,8 +152,11 @@
 
 <!ENTITY Ctr_paneluibtweak	"Botão do Painel IU (na barra de guias): aparência igual a do botão do aplicativo na barra de título">
 <!ENTITY Ctr_dblclnewtab	"Barra de guias: um duplo clique abre uma 'nova' guia (usando navegador.novaguia.url)">
+<!ENTITY Ctr_hidetbwot		"Barra de guias: hide tabs toolbar with one tab (restart Firefox!)">
+<!ENTITY Ctr_faviconurl		"Favicon in urlbar (restart Firefox!)">
 <!ENTITY Ctr_dblclclosefx	"Botão do aplicativo na barra de título: um duplo clique fecha a janela atual">
 <!ENTITY Ctr_hide_bf_popup	"Botão móvel voltar/avançar: ocultar o menú histórico ao pressionar o mouse">
+<!ENTITY Ctr_verifiedcolors	"Alternative identity-box colors for verified websites">
 
 <!ENTITY Ctr_animation		"Animações">
 <!ENTITY Ctr_throbberalt	"Guia alternativa 'throbber' ao carregar a animação">
